html elements test

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            Paul Dennig
+        </title>
+    </head>
     <body>
         <h1>
-            Hello World!
+            Large heading.
         </h1>
+        <h6 id="section">
+            Small heading.
+        </h6>
         <p>
-            First attempt with GitHub Pages.
+            Trying out different html <br>elements.
         </p>
+        <a href="https://www.notion.so/" target="_blank">
+            NOTION
+        </a>
+        <a href="#">
+            Top of Page
+        </a>
+        <a href="#section">
+            Link to small heading
+        </a>
     </body>
 </html>
