finished experimenting with html elements

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Paul Dennig
+            Paul Dennig | github.io
         </title>
     </head>
     <body>
@@ -15,16 +15,26 @@
         <p>
             Trying out different html <br>elements.
         </p>
-        <a href="https://www.notion.so/" target="_blank">
-            NOTION
-        </a>
         <br>
-        <a href="#">
-            Top of Page
-        </a>
-        <br>
-        <a href="#section">
-            Link to small heading
-        </a>
+        <ol>
+            <li>
+                <a href="https://www.notion.so/" target="_blank">NOTION</a>
+            </li>
+            <li>
+                <a href="#">Top of Page</a>
+            </li>
+            <li>
+                <a href="#section">Link to small heading</a>
+            </li>
+            
+        </ol>
+        <p>Integrate:
+            <ul>
+                <li>typescript</li>
+                <li>react</li>
+                <li>tailwind</li>
+            </ul>
+        </p>
+        <img src="images/edit_dog_2_lowrespng.png" alt="dog" width="400" height="400">
     </body>
 </html>
