--- a/index.html
+++ b/index.html
@@ -6,35 +6,15 @@
         </title>
     </head>
     <body>
+        <img src="images/edit_dog_2_lowrespng.png" alt="dog" width="300" height="300">
         <h1>
-            Large heading.
+            Paul Dennig
         </h1>
-        <h6 id="section">
-            Small heading.
+        <h3>
+            Software Engineer<br>
+            MEng in Mechanical Engineering @ UC Berkeley
         </h6>
         <p>
-            Trying out different html <br>elements.
+            welcome to my github io page :)
         </p>
-        <br>
-        <ol>
-            <li>
-                <a href="https://www.notion.so/" target="_blank">NOTION</a>
-            </li>
-            <li>
-                <a href="#">Top of Page</a>
-            </li>
-            <li>
-                <a href="#section">Link to small heading</a>
-            </li>
-            
-        </ol>
-        <p>Integrate:
-            <ul>
-                <li>typescript</li>
-                <li>react</li>
-                <li>tailwind</li>
-            </ul>
-        </p>
-        <img src="images/edit_dog_2_lowrespng.png" alt="dog" width="400" height="400">
-    </body>
 </html>
