updated status message at bottom

--- a/index.html
+++ b/index.html
@@ -14,7 +14,5 @@
             Software Engineer<br>
             MEng in Mechanical Engineering @ UC Berkeley
         </h6>
-        <p>
-            welcome to my github io page :)
-        </p>
+        <p>This github.io page is under construction...</p>
 </html>
