--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
         </title>
     </head>
     <body>
+        <header>
+            <h4>About</h4>
+        </header>
         <img src="images/edit_pamper_cat_squarecrop_500px.png" alt="kitty" width="300" height="300">
-        <h1>
-            Paul Dennig
-        </h1>
-        <h3>
-            Software Engineer<br>
-            MEng in Mechanical Engineering @ UC Berkeley
-        </h6>
-        <p>This github.io page is under construction...</p>
+        <div>
+            <section id="info">
+                <h1>Paul Dennig</h1>
+                <h3>
+                    Software Engineer<br>
+                    MEng in Mechanical Engineering @ UC Berkeley
+                </h3>
+                <p>This github.io page is under construction...</p>
+            </section>
+        </div>
+        <footer>
+            <p>last published 2/20/2023 by Paul Dennig</p>
+        </footer>
 </html>
