overhauled with hyperplexed guide

--- a/index.html
+++ b/index.html
@@ -6,21 +6,14 @@
         </title>
     </head>
     <body>
-        <header>
-            <h4>About</h4>
-        </header>
-        <img src="images/edit_pamper_cat_squarecrop_500px.png" alt="kitty" width="300" height="300">
-        <div>
-            <section id="info">
-                <h1>Paul Dennig</h1>
-                <h3>
-                    Software Engineer<br>
-                    MEng in Mechanical Engineering @ UC Berkeley
-                </h3>
-                <p>This github.io page is under construction...</p>
-            </section>
+        <div id="image-track">
+            <img class="image" src="./images/track-001.jpg" />
+            <img class="image" src="./images/track-002.jpg" />
+            <img class="image" src="./images/track-003.jpg" />
+            <img class="image" src="./images/track-004.jpg" />
+            <img class="image" src="./images/track-005.jpg" />
+            <img class="image" src="./images/track-006.jpg" />
+            <img class="image" src="./images/track-007.jpg" />
         </div>
-        <footer>
-            <p>last published 2/20/2023 by Paul Dennig</p>
-        </footer>
+    </body>
 </html>
