--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            Paul Dennig | github.io
-        </title>
+        <title>Paul Dennig | github.io</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div id="image-track">
