--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="image-track">
-            <img class="image" src="./images/track-001.jpg" />
-            <img class="image" src="./images/track-002.jpg" />
-            <img class="image" src="./images/track-003.jpg" />
-            <img class="image" src="./images/track-004.jpg" />
-            <img class="image" src="./images/track-005.jpg" />
-            <img class="image" src="./images/track-006.jpg" />
-            <img class="image" src="./images/track-007.jpg" />
+        <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+            <img class="image" src="./images/track-001.jpg" draggable="false"/>
+            <img class="image" src="./images/track-002.jpg" draggable="false"/>
+            <img class="image" src="./images/track-003.jpg" draggable="false"/>
+            <img class="image" src="./images/track-004.jpg" draggable="false"/>
+            <img class="image" src="./images/track-005.jpg" draggable="false"/>
+            <img class="image" src="./images/track-006.jpg" draggable="false"/>
+            <img class="image" src="./images/track-007.jpg" draggable="false"/>
         </div>
+        <script src="code.js"></script>
     </body>
 </html>
