organized file structure and added menu + pages

--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Paul Dennig | github.io</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>Paul Dennig | Home</title>
+        <link rel="stylesheet" href="./styles/index.css">
     </head>
     <body>
-        <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-            <img class="image" src="./images/track-001.jpg" draggable="false"/>
-            <img class="image" src="./images/track-002.jpg" draggable="false"/>
-            <img class="image" src="./images/track-003.jpg" draggable="false"/>
-            <img class="image" src="./images/track-004.jpg" draggable="false"/>
-            <img class="image" src="./images/track-005.jpg" draggable="false"/>
-            <img class="image" src="./images/track-006.jpg" draggable="false"/>
-            <img class="image" src="./images/track-007.jpg" draggable="false"/>
+        <div id="menu">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <script src="code.js"></script>
+        <div>
+            <header>
+                <h1>hello, world!</h1>
+            </header>
+            <img src="images/edit_pamper_cat_squarecrop_500px.png" alt="kitty" width="300" height="300">
+            <div>
+                <section id="info">
+                    <h1>Paul Dennig</h1>
+                    <h3>
+                        Software Engineer<br>
+                        MEng in Mechanical Engineering @ UC Berkeley
+                    </h3>
+                    <p>This github.io page is under construction...</p>
+                </section>
+            </div>
+            <footer>
+                <p>last published 2/20/2023 by Paul Dennig</p>
+            </footer>
+        </div>
     </body>
 </html>
