populated and added construction comments

--- a/about.html
+++ b/about.html
@@ -17,6 +17,15 @@
         </div>
         <div>
             <h1>About</h1>
+            <section id="info">
+                <h1>Paul Dennig</h1>
+                <h3>
+                    Software Engineer<br>
+                    MEng in Mechanical Engineering @ UC Berkeley
+                </h3>
+                <p>This github.io page is under construction...</p>
+                <p>The slider on the projects page was inspired by camillemomal.com</p>
+            </section>
         </div>
     </body>
 </html>
