--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
         </div>
         <div>
             <h1>Projects</h1>
+            <p>This github.io page is under construction...</p>
         </div>
         <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
             <img class="image" src="./images/track-001.jpg" draggable="false"/>
