--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
         </div>
         <div>
             <h1>Contact</h1>
+            <p>pauldennig@berkeley.edu</p>
+            <p>This github.io page is under construction...</p>
         </div>
     </body>
 </html>
