working but jarring light and dark modes

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><button id="toggle">Toggle Theme</button></li>
                 </ul>
             </nav>
         </div>
@@ -27,5 +28,6 @@
                 <p>The slider on the projects page was inspired by camillemomal.com</p>
             </section>
         </div>
+        <script src="./scripts/lightDarkModes.js"></script>
     </body>
 </html>
