--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
     <head>
         <title>Paul Dennig | Projects</title>
         <link rel="stylesheet" href="./styles/projects.css">
+        <script src="./scripts/lightDarkModes.js"></script>
     </head>
     <body>
         <div id="menu">
@@ -12,6 +13,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><button id="toggle">Toggle Theme</button></li>
                 </ul>
             </nav>
         </div>
@@ -29,5 +31,6 @@
             <img class="image" src="./images/track-007.jpg" draggable="false"/>
         </div>
         <script src="./scripts/projects.js"></script>
+        
     </body>
 </html>
