--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Paul Dennig | Home</title>
         <link rel="stylesheet" href="./styles/index.css">
+        <script src="./scripts/lightDarkModes.js"></script>
     </head>
     <body>
         <div id="menu">
@@ -12,6 +13,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><button id="toggle">Toggle Theme</button></li>
                 </ul>
             </nav>
         </div>
